# i18n-json-csv-migrator

./: README.md  i18n-migrator.py  i18n_migrator.py  pyproject.toml
.github/workflows/: ci-github.yml
test_files/: de-DE.json  en-GB.json  fr-FR.json
tests/: test_i18n_migrator.py
