[tool.poetry]
name = "i18n_json_csv_migrator"
version = "0.1.0"
description = "CLI tool to quickly convert web-app localisation json file (i18n) into/back-into CSV for people who do not want to deal with JSON."
authors = ["Karthikeya Udupa <KarthikeyaUdupa@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
pandas = "^1.1.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "*"
flake8-bugbear = "*"
isort = "*"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120

[tool.poetry.scripts]
my-script="i18n_json_csv_migrator"

[flake8]
ignore = "E501"
max-line-length = 120
inline-quotes = "double"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
